--- a/frontend/static/ui/index.html
+++ b/frontend/static/ui/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <link rel="icon" type="image/x-icon" sizes="16x16 32x32" href="favicon.ico">
-    <link rel="stylesheet" href="//cdn.webix.com/edge/skins/compact.css" type="text/css">
-    <script src="//code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
-    <script src="//cdn.webix.com/edge/webix.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="compact.css" type="text/css">
+    <script src="jquery-3.2.1.min.js" type="text/javascript"></script>
+    <script src="webix.js" type="text/javascript"></script>
 </head>
 <body>
 <script src="index.js" type="text/javascript" charset="utf-8"></script>
